--- a/android/res/layout/activity_launcher.xml
+++ b/android/res/layout/activity_launcher.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<LinearLayout 
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:ads="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:id="@+id/layout_shortcut"
 	android:layout_width="match_parent"
@@ -10,95 +9,274 @@
 	android:background="#252525"
 	android:weightSum="1"
 	tools:context="in.celest.xash3d.LauncherActivity" >
-	<LinearLayout
+	<TextView
+		android:id="@+id/textView_tittle"
 		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-		android:orientation="horizontal"
+		android:layout_height="50dp"
+		android:layout_marginBottom="1dp"
+		android:layout_marginLeft="5dp"
+		android:background="#555555"
 		android:layout_marginRight="5dp"
 		android:layout_marginTop="20dp"
-		android:layout_marginLeft="5dp"
-		android:background="#555555" >
-		<TextView
-			android:id="@+id/textView_tittle"
-			android:layout_width="wrap_content"
-			android:layout_height="50dp"
-			android:background="#555555"
-			android:drawableLeft="@drawable/ic_launcher"
-			android:drawablePadding="5dp"
-			android:singleLine="true"
-			android:gravity="center_vertical"
-			android:clickable="true"
-			android:onClick="onTitleClick" />
-		<TextView
-			android:id="@+id/textView_title"
-			android:layout_width="fill_parent"
-			android:layout_height="50dp"
-			android:layout_marginRight="1dp"
-			android:layout_marginTop="1dp"
-			android:layout_marginBottom="1dp"
-			android:layout_marginLeft="1dp"
-			android:text="@string/app_name"
-			android:textAppearance="?android:attr/textAppearanceMedium"
-			android:textSize="25sp"
-			android:singleLine="true"
-			android:gravity="center_vertical" />
-	</LinearLayout>
-	<LinearLayout
+		android:text="@string/launcher_name"
+		android:textAppearance="?android:attr/textAppearanceMedium"
+		android:textSize="25sp"
+		android:drawableLeft="@drawable/ic_launcher"
+		android:drawablePadding="10dp"
+		android:singleLine="true"
+		android:gravity="center_vertical" />
+	<TabHost
+		android:id="@+id/tabhost"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:background="#555555"
-		android:orientation="vertical"
 		android:layout_weight="1.20"
-		android:layout_marginBottom="5dp"
-		android:layout_marginLeft="5dp"
-		android:layout_marginRight="5dp"
-		android:layout_marginTop="10dp">
-		<ScrollView
+		android:paddingBottom="10dp"
+		android:paddingLeft="3dp"
+		android:paddingRight="3dp"
+		android:paddingTop="8dp">
+		<LinearLayout
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
-			android:id="@+id/scrollView2">
-			<LinearLayout 
+			android:background="#555555"
+			android:orientation="vertical">
+			<TabWidget
+				android:id="@android:id/tabs"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:showDividers="middle" />
+			<ScrollView
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
-				android:layout_marginBottom="10dp"
-				android:layout_marginLeft="10dp"
-				android:layout_marginRight="10dp"
-				android:layout_marginTop="10dp"
-				android:background="#444444"
-				android:orientation="vertical"
-				android:weightSum="1">
-				<TextView
-					android:id="@+id/textView_args"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_marginBottom="1dp"
-					android:layout_marginLeft="10dp"
-					android:layout_marginRight="10dp"
-					android:layout_marginTop="10dp"
-					android:text="@string/cmd_args_text"
-					android:textAppearance="?android:attr/textAppearanceMedium" />
-				<TextView
-					android:id="@+id/textView_args"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_marginBottom="1dp"
-					android:layout_marginLeft="10dp"
-					android:layout_marginRight="10dp"
-					android:layout_marginTop="1dp"
-					android:text="@string/cmd_args_text2"
-					android:textAppearance="?android:attr/textAppearanceSmall" />
-				<EditText
-					android:id="@+id/cmdArgs"
+				android:id="@+id/scrollView2">
+				<FrameLayout
+					android:id="@android:id/tabcontent"
 					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:layout_marginBottom="10dp"
-					android:layout_marginLeft="10dp"
-					android:layout_marginRight="10dp"
-					android:layout_marginTop="1dp"
-					android:hint="@string/defCmdArgs"/>
-			</LinearLayout>
-		</ScrollView>
-	</LinearLayout>
+					android:layout_height="match_parent">
+					<LinearLayout
+						android:id="@+id/tab1"
+						android:layout_width="match_parent"
+						android:layout_height="wrap_content"
+						android:layout_marginLeft="10dp"
+						android:layout_marginRight="10dp"
+						android:layout_marginTop="15dp"
+						android:layout_marginBottom="25dp"
+						android:background="#333333"
+						android:orientation="vertical"
+						android:text="@string/text_tab1"
+						android:weightSum="0.6">
+						<TextView
+							android:id="@+id/textView_path1"
+							android:layout_width="fill_parent"
+							android:layout_height="40dp"
+							android:layout_marginBottom="2dp"
+							android:layout_marginLeft="10dp"
+							android:background="#444444"
+							android:layout_marginRight="10dp"
+							android:layout_marginTop="10dp"
+							android:text="@string/text_res_tittle2"
+							android:textAppearance="?android:attr/textAppearanceMedium"
+							android:textSize="20sp"
+							android:gravity="center_vertical|center_horizontal" />
+						<LinearLayout 
+							android:layout_width="match_parent"
+							android:layout_height="match_parent"
+							android:layout_marginBottom="10dp"
+							android:layout_marginLeft="10dp"
+							android:layout_marginRight="10dp"
+							android:layout_marginTop="10dp"
+							android:background="#444444"
+							android:orientation="vertical"
+							android:weightSum="1">
+							<TextView
+								android:layout_width="fill_parent"
+								android:layout_height="wrap_content"
+								android:layout_marginBottom="10dp"
+								android:layout_marginLeft="10dp"
+								android:layout_marginRight="10dp"
+								android:layout_marginTop="3dp"
+								android:text="@string/volume"
+								android:textAppearance="?android:attr/textAppearanceMedium" />
+							<ToggleButton
+								android:id="@+id/useVolume"
+								android:layout_width="match_parent"
+								android:layout_height="wrap_content"
+								android:layout_margin="10dp"
+								android:layout_marginLeft="10dp"
+								android:layout_marginRight="10dp"
+								android:layout_marginTop="10dp"
+								android:text="nothing"
+								android:textOff="@string/no_volume"
+								android:textOn="@string/use_volume" />
+							<TextView
+								android:id="@+id/textView_path"
+								android:layout_width="fill_parent"
+								android:layout_height="wrap_content"
+								android:layout_marginBottom="10dp"
+								android:layout_marginLeft="10dp"
+								android:layout_marginRight="10dp"
+								android:layout_marginTop="3dp"
+								android:text="@string/text_res_path"
+								android:textAppearance="?android:attr/textAppearanceMedium" />
+							<Button
+								android:id="@+id/button_select"
+								android:layout_width="match_parent"
+								android:layout_height="wrap_content"
+								android:layout_gravity="bottom"
+								android:layout_marginLeft="10dp"
+								android:layout_marginTop="10dp"
+								android:layout_marginBottom="10dp"
+								android:layout_marginRight="10dp"
+								android:onClick="selectFolder"
+								android:text="@string/select_folder" />
+							<Button
+								android:id="@+id/button_shortcut"
+								android:layout_width="match_parent"
+								android:layout_height="wrap_content"
+								android:layout_marginBottom="10dp"
+								android:layout_marginLeft="10dp"
+								android:layout_marginRight="10dp"
+								android:layout_marginTop="10dp"
+								android:onClick="createShortcut"
+								android:text="@string/create_shortcut_button" />
+						</LinearLayout>
+					</LinearLayout>
+					<LinearLayout
+						android:id="@+id/tab2"
+						android:layout_width="match_parent"
+						android:layout_height="match_parent"
+						android:layout_marginLeft="10dp"
+						android:layout_marginRight="10dp"
+						android:layout_marginTop="15dp"
+						android:background="#333333"
+						android:orientation="vertical"
+						android:text="@string/text_tab2">
+						<TextView
+							android:id="@+id/textView_path2"
+							android:layout_width="fill_parent"
+							android:layout_height="40dp"
+							android:layout_marginBottom="2dp"
+							android:layout_marginLeft="10dp"
+							android:background="#444444"
+							android:layout_marginRight="10dp"
+							android:layout_marginTop="13dp"
+							android:text="@string/text_res_tittle3"
+							android:textAppearance="?android:attr/textAppearanceMedium"
+							android:textSize="20sp"
+							android:gravity="center_vertical|center_horizontal" />
+						<LinearLayout 
+							android:layout_width="match_parent"
+							android:layout_height="match_parent"
+							android:layout_marginBottom="10dp"
+							android:layout_marginLeft="10dp"
+							android:layout_marginRight="10dp"
+							android:layout_marginTop="10dp"
+							android:background="#444444"
+							android:orientation="vertical"
+							android:weightSum="1">
+							<TextView
+								android:id="@+id/textView_args"
+								android:layout_width="wrap_content"
+								android:layout_height="wrap_content"
+								android:layout_marginBottom="10dp"
+								android:layout_marginLeft="10dp"
+								android:layout_marginRight="10dp"
+								android:layout_marginTop="20dp"
+								android:text="@string/cmd_args_text"
+								android:textAppearance="?android:attr/textAppearanceMedium" />
+							<EditText
+								android:id="@+id/cmdArgs"
+								android:layout_width="match_parent"
+								android:layout_height="wrap_content"
+								android:layout_marginBottom="10dp"
+								android:layout_marginLeft="10dp"
+								android:layout_marginRight="10dp"
+								android:layout_marginTop="3dp" />
+							<TextView
+								android:layout_width="fill_parent"
+								android:layout_height="wrap_content"
+								android:layout_marginBottom="10dp"
+								android:layout_marginLeft="10dp"
+								android:layout_marginRight="10dp"
+								android:layout_marginTop="3dp"
+								android:text="@string/text_res_path"
+								android:textAppearance="?android:attr/textAppearanceMedium" />
+							<EditText
+								android:id="@+id/cmdPath"
+								android:layout_width="match_parent"
+								android:layout_height="wrap_content"
+								android:layout_marginBottom="10dp"
+								android:layout_marginLeft="10dp"
+								android:layout_marginRight="10dp"
+								android:layout_marginTop="3dp" />
+							<TextView
+								android:layout_width="fill_parent"
+								android:layout_height="wrap_content"
+								android:layout_marginBottom="10dp"
+								android:layout_marginLeft="10dp"
+								android:layout_marginRight="10dp"
+								android:layout_marginTop="3dp"
+								android:text="Pixel Format"
+								android:textAppearance="?android:attr/textAppearanceMedium" />
+							<Spinner
+								android:layout_height="wrap_content"
+								android:layout_width="match_parent"
+								android:id="@+id/pixelSpinner"
+								android:layout_marginBottom="10dp"
+								android:layout_marginLeft="10dp"
+								android:layout_marginRight="10dp"
+								android:layout_marginTop="10dp" />
+							<ToggleButton
+								android:id="@+id/enableResizeWorkaround"
+								android:layout_width="match_parent"
+								android:layout_height="wrap_content"
+								android:layout_margin="10dp"
+								android:layout_marginLeft="10dp"
+								android:layout_marginRight="10dp"
+								android:layout_marginTop="10dp"
+								android:text="enableResizeWorkaround"
+								android:textOff="Keyboard does not resize screen"
+								android:textOn="Keyboard resizes screen" />
+							<CheckBox
+								android:id="@+id/check_updates"
+								android:layout_width="match_parent"
+								android:layout_height="wrap_content"
+								android:layout_margin="10dp"
+								android:layout_marginLeft="10dp"
+								android:layout_marginRight="10dp"
+								android:layout_marginTop="10dp"
+								android:text="@string/update_button" />
+							<CheckBox
+								android:id="@+id/check_betas"
+								android:layout_width="match_parent"
+								android:layout_height="wrap_content"
+								android:layout_margin="10dp"
+								android:layout_marginLeft="10dp"
+								android:layout_marginRight="10dp"
+								android:layout_marginTop="10dp"
+								android:text="@string/update_to_beta" />
+							<CheckBox
+								android:id="@+id/immersive_mode"
+								android:layout_width="match_parent"
+								android:layout_height="wrap_content"
+								android:layout_margin="10dp"
+								android:layout_marginLeft="10dp"
+								android:layout_marginRight="10dp"
+								android:layout_marginTop="10dp"
+								android:text="@string/immersive_mode" />
+							<TextView
+								android:id="@+id/textView7"
+								android:layout_marginBottom="10dp"
+								android:layout_width="fill_parent"
+								android:layout_height="0dp"
+								android:layout_gravity="center_horizontal"
+								android:layout_weight="1"
+								android:clickable="false" />
+						</LinearLayout>
+					</LinearLayout>
+				</FrameLayout>
+			</ScrollView>
+		</LinearLayout>
+	</TabHost>
 	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="50dp"
@@ -108,14 +286,20 @@
 		android:layout_gravity="bottom"
 		android:orientation="horizontal">
 		<Button
-			android:id="@+id/button_launch"
-			android:layout_width="match_parent"
+			android:id="@+id/button_about"
+			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
+			android:layout_gravity="left"
+			android:onClick="aboutXash"
+			android:text="@string/about_button" />
+		<Button
+			android:id="@+id/button_launch"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_column="6"
 			android:layout_marginLeft="0dp"
+			android:layout_weight="0.87"
 			android:onClick="startXash"
-			android:text="@string/launch_button" >
-			<requestFocus />
-		</Button>
+			android:text="@string/launch_button" />
 	</LinearLayout>
 </LinearLayout>
-
