--- a/android/res/layout/about.xml
+++ b/android/res/layout/about.xml
@@ -20,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/about_main"
+            android:text="@string/app_name"
             android:id="@+id/textView"
             android:layout_gravity="center_horizontal" />
 
@@ -28,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="https://FWGS.github.io"
+            android:text="http://paranoia.level-design.ru"
             android:id="@+id/textView9"
             android:autoText="false"
             android:autoLink="web"
