--- a/android/res/layout/activity_launcher.xml
+++ b/android/res/layout/activity_launcher.xml
@@ -18,7 +18,7 @@
 		android:background="#555555"
 		android:layout_marginRight="5dp"
 		android:layout_marginTop="20dp"
-		android:text="@string/launcher_name"
+		android:text="@string/app_name"
 		android:textAppearance="?android:attr/textAppearanceMedium"
 		android:textSize="25sp"
 		android:drawableLeft="@drawable/ic_launcher"
@@ -107,37 +107,6 @@
 								android:text="nothing"
 								android:textOff="@string/no_volume"
 								android:textOn="@string/use_volume" />
-							<TextView
-								android:id="@+id/textView_path"
-								android:layout_width="fill_parent"
-								android:layout_height="wrap_content"
-								android:layout_marginBottom="10dp"
-								android:layout_marginLeft="10dp"
-								android:layout_marginRight="10dp"
-								android:layout_marginTop="3dp"
-								android:text="@string/text_res_path"
-								android:textAppearance="?android:attr/textAppearanceMedium" />
-							<Button
-								android:id="@+id/button_select"
-								android:layout_width="match_parent"
-								android:layout_height="wrap_content"
-								android:layout_gravity="bottom"
-								android:layout_marginLeft="10dp"
-								android:layout_marginTop="10dp"
-								android:layout_marginBottom="10dp"
-								android:layout_marginRight="10dp"
-								android:onClick="selectFolder"
-								android:text="@string/select_folder" />
-							<Button
-								android:id="@+id/button_shortcut"
-								android:layout_width="match_parent"
-								android:layout_height="wrap_content"
-								android:layout_marginBottom="10dp"
-								android:layout_marginLeft="10dp"
-								android:layout_marginRight="10dp"
-								android:layout_marginTop="10dp"
-								android:onClick="createShortcut"
-								android:text="@string/create_shortcut_button" />
 						</LinearLayout>
 					</LinearLayout>
 					<LinearLayout
@@ -185,23 +154,6 @@
 								android:textAppearance="?android:attr/textAppearanceMedium" />
 							<EditText
 								android:id="@+id/cmdArgs"
-								android:layout_width="match_parent"
-								android:layout_height="wrap_content"
-								android:layout_marginBottom="10dp"
-								android:layout_marginLeft="10dp"
-								android:layout_marginRight="10dp"
-								android:layout_marginTop="3dp" />
-							<TextView
-								android:layout_width="fill_parent"
-								android:layout_height="wrap_content"
-								android:layout_marginBottom="10dp"
-								android:layout_marginLeft="10dp"
-								android:layout_marginRight="10dp"
-								android:layout_marginTop="3dp"
-								android:text="@string/text_res_path"
-								android:textAppearance="?android:attr/textAppearanceMedium" />
-							<EditText
-								android:id="@+id/cmdPath"
 								android:layout_width="match_parent"
 								android:layout_height="wrap_content"
 								android:layout_marginBottom="10dp"
